--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="#portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#team">Team</a>
+                <a class="nav-link" href="#team">SOPORTE</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
