--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 			</div>
 		</div>
     </section>
-     <H2>SOPORTE</H2>
+     <h2>SOPORTE</h2>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
